--- a/resources/qcollect-ng.yml
+++ b/resources/qcollect-ng.yml
@@ -2,7 +2,7 @@ ticker:
     interval: 5000
 collectors: "file"
 filters: "id"
-handlers: "log"
+handlers: "opentsdb"
 collector:
   file:
     path: "resources/metrics.graphite"
@@ -10,3 +10,6 @@ collector:
 handler:
   log:
     inputs: "id"
+  opentsdb:
+    server: "172.17.0.1"
+    inputs: "file"
