add plugin.tar creation to drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -16,6 +16,7 @@ pipeline:
     image: qnib/uplain-golang
     commands:
      - ./bin/build.sh
+     - tar cf plugins.tar lib/
   release:
     image: qnib/uplain-golang
     commands:
